base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example
spec:
  ports:
  - port: 80
    name: http
    targetPort: http
